--- a/templates/profile.html
+++ b/templates/profile.html
@@ -114,8 +114,9 @@
 <body>
 <div class="navbar">
     <a href="/">Home</a>
+    <a href="/login">Login</a>
+    <a href="/signup">Signup</a>
     <a href="/about">About</a>
-    <a href="/profile">Profile</a>
 
 </div>
 <div class="container">
