--- a/templates/Text-input.html
+++ b/templates/Text-input.html
@@ -35,6 +35,33 @@
             animation: fadeIn 0.5s ease-in-out;
         }
 
+        .navbar {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 10px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+
+    .navbar a {
+      color: white;
+      padding: 14px 20px;
+      text-decoration: none;
+      text-align: center;
+      transition: background-color 0.3s;
+      margin-right: 10px;
+    }
+
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
                 /* Informationsbox */
                 .info-box {
             background-color: #e0f7fa;
@@ -130,11 +157,15 @@
     </style>
 </head>
 <body>
-<div class="navbar">
-    <a href="/">Home</a>
-    <a href="/profile">Profile</a>
-    <a href="/about">About</a>
-</div>
+    <div class="navbar">
+        <a href="/">Home</a>
+        <a href="/login">Login</a>
+        <a href="/signup">Signup</a>
+        <a href="/profile">Profile</a>
+        <a href="/about">About</a>
+
+      </div>
+
 <div class="container">
     <div class="voice-recording">
 
