--- a/templates/index.html
+++ b/templates/index.html
@@ -176,7 +176,7 @@
     <a href="/about">About</a>
 </div>
 <div class="container">
-    <h1>Ship Inspection App(manuel Form)</h1>
+    <h1>Inspection App(manuel Form)</h1>
     <div class="welcome-message">
         <p>Welcome, <strong>{{ username }}</strong>. Your user ID is: <strong>{{ user_id }}</strong>.</p>
     </div>
