--- a/templates/Text-input.html
+++ b/templates/Text-input.html
@@ -173,11 +173,10 @@
     <div class="info-box">
         <h2>Erforderliche Informationen:</h2>
         <ul>
-            <li><strong>Inspection Location:</strong> Der Ort der Inspektion (z.B. Hamburg)</li>
-            <li><strong>Device Name:</strong> Der Name des Device (z.B. testo510)</li>
-            <li><strong>Inspection Date:</strong> Das Datum der Inspektion (z.B. 11/11/2026)</li>
-            <li><strong>Inspection Details:</strong> Details der Inspektion (z.B. Routineüberprüfung)</li>
-            <li><strong>Kältepump:</strong> Ein numerischer Wert (z.B. 333)</li>
+            <li><strong>Ziel Füllgewicht:</strong> Ein numerischer **Float**-Wert (z.B. 333.5)</li>
+            <li><strong>Pulsierendes Befüllen:</strong> Muss entweder **"Ein"** oder **"Aus"** sein</li>
+            <li><strong>Druckart:</strong> Muss entweder **"Relativ"** oder **"Absolut"** sein</li>
+            <li><strong>Umgebungsdruck:</strong> Ein numerischer **Float**-Wert (z.B. 1013.25)</li>
         </ul>
         <p>Bitte geben Sie alle Informationen in das Textfeld unten ein.</p>
     </div>
