--- a/templates/index.html
+++ b/templates/index.html
@@ -210,7 +210,7 @@
 
         <div class="button-container">
             <input type="submit" value="✔️ Submit" required>
-            <a href="/text_input" class="download-button"> 🤖 Go to AI Form</a>
+            <a href="/upload_form" class="download-button"> 🤖 Go to AI Form</a>
             <a href="/" class="home-button">🏠 Back to Homepage</a>
         </div>
     </form>
