ready for testo2

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -150,7 +150,7 @@
 
     <div class="container">
         <h2>📝 Sign Up</h2>
-        <form id="signupForm" action="/signup/submit" method="post" onsubmit="return validatePassword()">
+        <form id="signupForm" action="/all/" method="post" onsubmit="return validatePassword()">
             <label for="username">👤 Username:</label>
             <input type="text" id="username" name="username" required>
             
